@@ -27,6 +27,7 @@ Readonly::Scalar my  $ANALYSIS_DIR_GLOB => q{_basecalls_};
 Readonly::Scalar my  $NO_CAL_DIR        => q{no_cal};
 Readonly::Scalar my  $ARCHIVE_DIR       => q{archive};
 Readonly::Scalar my  $NO_ARCHIVE_DIR    => q{no_archive};
+Readonly::Scalar my  $PP_ARCHIVE_DIR    => q{pp_archive};
 Readonly::Scalar our $SUMMARY_LINK      => q{Latest_Summary};
 
 Readonly::Hash my %NPG_PATH  => (
@@ -37,6 +38,7 @@ Readonly::Hash my %NPG_PATH  => (
   q{recalibrated_path} => 'Path to the recalibrated qualities directory',
   q{archive_path}      => 'Path to the directory with data ready for archiving',
   q{no_archive_path}   => 'Path to the directory with data not to be archived',
+  q{pp_archive_path}   => 'Path to the archive directory for third party portable pipelines',
   q{qc_path}           => 'Path directory with top level QC data',
 );
 
@@ -184,6 +186,11 @@ sub _build_archive_path {
 sub _build_no_archive_path {
   my ($self) = @_;
   return $self->analysis_path() . q{/} . $NO_ARCHIVE_DIR;
+}
+
+sub _build_pp_archive_path {
+  my ($self) = @_;
+  return $self->analysis_path() . q{/} . $PP_ARCHIVE_DIR;
 }
 
 sub _build_qc_path {
@@ -382,6 +389,10 @@ recalibrated directory, which will be used to construct other paths from.
 
 =head2 no_archive_path - ro accessor to the no_archive level directory path
 
+=head2 pp_archive_path
+
+read-only attribute, path to the archive directory for third party portable pipelines
+
 =head2 subpath
 
 One of given paths from which the run folder path might be inferred.
@@ -425,11 +436,13 @@ Might be undefined.
 
 =item Marina Gourtovaia
 
+=item Martin Pollard
+
 =back
 
 =head1 LICENSE AND COPYRIGHT
 
-Copyright (C) 2018, 2019 Genome Research Limited
+Copyright (C) 2013,2014,2015,2018,2019,2020 Genome Research Ltd.
 
 This program is free software: you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
